k8s/overlays/k3s-rolling/patch-be-aws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-be
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    spec:
      imagePullSecrets:
        - name: community-ecr-pull
      containers:
        - name: be
          image: __BE_IMAGE__
