k8s/overlays/k3s-rolling/patch-delete-nginx-deployment.yaml
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-nginx
