k8s/overlays/k3s-rolling/patch-fe-aws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-fe
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    spec:
      imagePullSecrets:
        - name: community-ecr-pull
      containers:
        - name: fe
          image: __FE_IMAGE__
