k8s/overlays/k3s-rolling/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: community-app
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: community-be
                port:
                  number: 8000
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: community-be
                port:
                  number: 8000
          - path: /openapi.json
            pathType: Prefix
            backend:
              service:
                name: community-be
                port:
                  number: 8000
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: community-be
                port:
                  number: 8000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: community-be
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: community-fe
                port:
                  number: 3000
